--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "axios": "^0.23.0",
     "react": "^16.14.0",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.3"
