--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,8 @@
     "axios": "^0.23.0",
     "react": "^16.14.0",
     "react-dom": "^16.13.1",
+    "react-router": "^6.0.0",
+    "react-router-dom": "^6.0.0",
     "react-scripts": "3.4.3",
     "reactstrap": "^9.0.0"
   },
