--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "node": "^17.0.1",
     "react": "^16.14.0",
     "react-dom": "^16.13.1",
+    "react-icons": "^4.3.1",
     "react-router": "^6.0.0",
     "react-router-dom": "^6.0.0",
     "react-scripts": "3.4.3",
