--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "mysql": "^2.18.1"
+    "express-session": "^1.17.2",
+    "mysql": "^2.18.1",
+    "node": "^17.1.0"
   },
   "heroku-run-build-script": true
 }
