--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.23.0",
+    "node": "^17.1.0",
     "react": "^16.14.0",
     "react-dom": "^16.13.1",
     "react-icons": "^4.3.1",
@@ -15,7 +16,7 @@
     "reactstrap": "^9.0.1"
   },
   "scripts": {
-    "start": "react-scripts  start",
+    "start": "react-scripts --openssl-legacy-provider start",
     "build": "react-scripts  build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
