--- a/client/package.json
+++ b/client/package.json
@@ -6,8 +6,11 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.23.0",
+    "boostrap": "^2.0.0",
+    "bootstrap": "^5.1.3",
     "node": "^17.1.0",
     "react": "^16.14.0",
+    "react-bootstrap": "^2.0.3",
     "react-dom": "^16.13.1",
     "react-icons": "^4.3.1",
     "react-router": "^6.0.0",
