--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "boostrap": "^2.0.0",
     "bootstrap": "^5.1.3",
     "node": "^17.1.0",
+    "npm": "^8.3.0",
     "react": "^16.14.0",
     "react-bootstrap": "^2.0.3",
     "react-dom": "^16.13.1",
