--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "express-session": "^1.17.2",
     "multer": "^1.4.3",
     "mysql": "^2.18.1",
-    "node": "^17.1.0"
+    "node": "^17.1.0",
+    "npm": "^8.3.0"
   },
   "heroku-run-build-script": true
 }
